[metadata]
name = django-sbxt-accounts
version = 0.0
description = A django app to assist with common sandboxed thoughts user scenarios
long_description = file: README.rst
url = None
author = Sandboxed Thoughts
author_email = nate@sandboxedthoughts.com
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programing Language :: Python
    Programing Language :: Python :: 3
    Programing Language :: Python :: 3 Only
    Programing Language :: Python :: 3.10
    Programing Language :: Python :: 3.11
    Programing Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Authorization
    Topic :: Internet :: WWW/HTTP :: Authentication

[options]
include_package_data = true
packages = find:
python_requires = 
    >=3.10
install_requires =
    Django >=5.0,
    python-dateutil>=2.9